Fix showcase carousel breaking out of container in chrome

--- a/src/scss/_custom-styles.scss
+++ b/src/scss/_custom-styles.scss
@@ -883,6 +883,7 @@ html {
     .showcase-stage {
         position: relative;
         margin-top: 0.35rem;
+        width: 100%;
     }
     .showcase-arrow {
         position: absolute;
